--- a/docs/style.css
+++ b/docs/style.css
@@ -8,6 +8,9 @@ table {
     padding: 5px;
     margin: 0 auto;
 }
+.left {
+    display: none;
+}
 table td, th {
     font-size: 16px;
     border: 2px;
@@ -93,7 +96,7 @@ caption {
 #staff {
     left: 0%;
     top: 5px;
-    width: 250px;
+    width: 400px;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -141,6 +144,58 @@ input {
     overflow: hidden;
     min-width: 80px;
 }
+#theme-button {
+    display: inline-block;
+    background: #333;
+    color: #ccc;
+    min-width: 80px;
+    height: 30px;
+    border: 0;
+    font-size: 18px;
+    border-radius: 4px;
+    font-family: "Raleway", sans-serif;
+    transition: 0.6s;
+    overflow: hidden;
+}
+#theme-button:focus {
+    outline: 0;
+}
+/*#theme-button:before {
+    content: "";
+    display: block;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.5);
+    width: 80px;
+    height: 35px;
+    opacity: 0.5;
+    filter: blur(30px);
+    transform: translateX(-100px) skewX(-15deg);
+}
+#theme-button:after {
+    content: "";
+    display: block;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.2);
+    width: 80px;
+    height: 35px;
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100px) skewX(-15deg);
+}*/
+#theme-button:hover {
+    background: #338033;
+    cursor: pointer;
+}
+#theme-button:hover:before {
+    transform: translateX(300px) skewX(-15deg);
+    opacity: 0.6;
+    transition: 0.7s;
+}
+#theme-button:hover:after {
+    transform: translateX(300px) skewX(-15deg);
+    opacity: 1;
+    transition: 0.7s;
+}
 select {
     padding: 2px;
     margin: 5px;
@@ -163,10 +218,10 @@ option {
         background-repeat: no-repeat;
     }
 .money {
-         border: 0px;
-         border-color: #ffffff;
-         background-color: #ffffff;
-     }
+        border: 0px;
+        border-color: #ffffff;
+        background-color: #ffffff;
+    }
 .horya {
     background-color: #7fffd4;
 }
@@ -182,7 +237,7 @@ option {
 	        display: flex;
             white-space: nowrap;
         }
-       #worker {
+    #worker {
             max-height: 250px;
             left: 85%;
             top: 270px; 
@@ -202,10 +257,10 @@ option {
     }
     @media (max-width: 560px) {
         #staff {
-            left: 0%;
+            left: 0px;
             top: 5px;
-            width: 200px;
-            height: 70px;
+            width: 250px;
+            height: 50px;
             white-space: nowrap;
             overflow: hidden;
             position: absolute;
@@ -213,13 +268,14 @@ option {
             padding: 3px;
             margin: 0px;
         }
-        div #G,
-        div #H {
-            overflow: auto; 
+        #G,
+        #H,
+        #theme-button {
+            overflow: hidden; 
             font-size: 14px;
-            width: 30px;
             padding: 3px;
             margin: 0px;
+            min-width: 60px;
         }
         table {
             table-layout: fixed;
@@ -249,19 +305,20 @@ option {
             position: absolute;
         }
         #adventure {
-            max-height: 200px;
+            height: 90px;
             left: 5%;
-            top: 60px; 
+            top: 85px; 
             min-width: 150px;
             text-align: center;
             word-wrap:break-word;
             font-size: 14px;
             position: absolute;
+            padding-top: 0px;
         }
         #table1 caption,
         #table2 caption,
         #table3 caption,
-	#table4 caption,
+	    #table4 caption,
         #table5 caption,
         #table6 caption,
         #table7 caption {
@@ -273,8 +330,8 @@ option {
         #staff {
             left: 0%;
             top: 5px;
-            width: 200px;
-            height: 90px;
+            width: 90px;
+            height: 110px;
             white-space: nowrap;
             overflow: hidden;
             position: absolute;
