--- a/docs/style1.css
+++ b/docs/style1.css
@@ -493,7 +493,7 @@ option {
             height: 80px;
         }
         .left h1 {
-            margin: 20px;
+            margin-bottom: 40px;
         }
     }
     @media (max-width: 320px) {
